@@ -11,6 +11,7 @@ v0.10.3 ()
   Bugs fixed
 	* Deserialization problems with puppetDBs
 	* Fixed several bugs with imported resources
+	* Bug with relationships overrides that got stored as parameters
 
 v0.10.2 (2013/10/27)
   Bugs fixed
